[tool.poetry]
name = "cft-backend"
version = "0.1.0"
description = ""
authors = ["Vladislav Zarubin <vladislav.zarubin113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
annotated-types = "^0.6.0"
anyio = "^4.3.0"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
attrs = "^23.2.0"
bcrypt = "^4.1.3"
certifi = "^2024.2.2"
cffi = "^1.16.0"
click = "^8.1.7"
colorama = "^0.4.6"
dnspython = "^2.6.1"
ecdsa = "^0.19.0"
email-validator = "^2.1.1"
envparse = "^0.2.0"
fastapi = "^0.111.0"
greenlet = "^3.0.3"
h11 = "^0.14.0"
httpcore = "^1.0.5"
httptools = "^0.6.1"
httpx = "^0.27.0"
idna = "^3.7"
iniconfig = "^2.0.0"
mako = "^1.3.3"
markupsafe = "^2.1.5"
outcome = "^1.3.0.post0"
packaging = "^24.0"
passlib = "^1.7.4"
pluggy = "^1.5.0"
psycopg2 = "^2.9.9"
pyasn1 = "^0.6.0"
pycparser = "^2.22"
pydantic = "^2.7.1"
pydantic-core = "^2.18.2"
pytest = "^8.2.0"
pytest-anyio = "^0.0.0"
pytest-asyncio = "^0.23.6"
pytest-trio = "^0.8.0"
python-dotenv = "^1.0.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
pyyaml = "^6.0.1"
rsa = "^4.9"
six = "^1.16.0"
sniffio = "^1.3.1"
sortedcontainers = "^2.4.0"
sqlalchemy = "^2.0.30"
starlette = "^0.37.2"
trio = "^0.25.0"
typing-extensions = "^4.11.0"
uvicorn = "^0.29.0"
watchfiles = "^0.21.0"
websockets = "^12.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
